kubernetes/vault/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: vault
  name: vault-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: vault.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  name: http
